--- a/src/app/property/property-card/property-card.component.css
+++ b/src/app/property/property-card/property-card.component.css
@@ -1,3 +1,38 @@
-.propImg {
+.card-img-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+
+.card:hover img{
+  transform: scale(1.2, 1.2);
+  transition-duration: 250ms;
+  transition-timing-function: ease-out;
   height: 250px;
+  opacity: .7;
+}
+
+.card img{
+  transform: scale(1, 1);
+  transition-duration: 250ms;
+  transition-timing-function: ease-out;
+  height: 250px;
+}
+
+.member-icons {
+  position: absolute;
+  bottom: -10%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons {
+  bottom: 0;
+  opacity: 1;
+}
+
+.animate{
+  transition: all 0.3s ease-out;
 }
