--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,12 +1,19 @@
-<div class="row">
-  <div class="shadow-lg col-sm-4 p-3">
-    <div class="card">
-      <img class="propImg" src="assets/images/house_default.jpg">
-      <div class="card-body p-2">
-        <h1>{{Property.Name}}</h1>
-        <h1>{{Property.Type}}</h1>
-        <h1>{{Property.Price}}</h1>
-      </div>
-    </div>
+<div class="card">
+  <div class="card-img-wrapper">
+    <img class="card-img-top" src="assets/images/house_default.jpg">
+    <ul class="list-inline text-center member-icons animate">
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fas fa-edit"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fas fa-phone"></i></button>
+      </li>
+    </ul>
+  </div>
+
+  <div class="card-body p-2">
+    <h1>{{property.Name}}</h1>
+    <h1>{{property.Type}}</h1>
+    <h3>{{property.Price}}</h3>
   </div>
 </div>
