--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,9 +1,10 @@
 <div class="card">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="assets/images/house_default.jpg">
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house_default.jpg">
+    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg">
     <ul class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fas fa-edit"></i></button>
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fas fa-edit"></i></button>
       </li>
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fas fa-phone"></i></button>
