--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -1,4 +1,38 @@
-<p>
-  add-property works!
-  <button (click)="onBack()" class="btn btn-primary">Back</button>
-</p>
+<div class="card">
+  <div class="card-header">
+    Add New Property
+  </div>
+  <div class="card-body">
+    <form (ngSubmit)="onSubmit()" #Form="ngForm">
+      <div class="form-group col-12">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" #propName="ngModel"
+                  ngModel name="Name" required minlength="5">
+        <span *ngIf="!propName.valid && propName.touched" class="error-block">
+          <span *ngIf="propName.errors.required" >Please provide name</span>
+          <span *ngIf="propName.errors.minlength" >Name must be atlest 5 char long</span>
+        </span>
+      </div>
+      <div class="form-group col-12">
+        <label for="type">Type</label>
+        <input type="text" class="form-control" #propType="ngModel"
+                  ngModel name="Type" required>
+        <span *ngIf="!propType.valid && propType.touched" class="error-block">
+          <span *ngIf="propType.errors.required" >Please provide type</span>
+        </span>
+      </div>
+      <div class="form-group col-12">
+        <label for="price">Price</label>
+        <input type="text" class="form-control"  #propPrice="ngModel"
+                  ngModel name="Price" required>
+        <span *ngIf="!propPrice.valid && propPrice.touched" class="error-block">
+          <span *ngIf="propPrice.errors.required" >Please provide price</span>
+        </span>
+      </div>
+      <div class="form-group col-12">
+        <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-2">Save</button>
+        <button type="reset" class="btn btn-primary">Cancel</button>
+      </div>
+    </form>
+  </div>
+</div>
