--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
           <a class="nav-link" routerLink="user/register" routerLinkActive="active">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="user/login">Login</a>
+          <a class="nav-link" routerLink="user/login" routerLinkActive="active">Login</a>
         </li>
       </ul>
     </div>
