--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -10,15 +10,14 @@
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
             <span *ngIf="!userName.valid
-            && userName.touched" class="error-block">
+            && (userName.touched || userSubmitted)" class="error-block">
               Please provide name
             </span>
           </div>
-
           <div class="form-group col-12">
             <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" formControlName="email">
-            <span *ngIf="!email.valid && email.touched" class="error-block">
+            <span *ngIf="!email.valid && (email.touched || userSubmitted)" class="error-block">
               <span *ngIf="email.hasError('required')">
                 Please provide email
               </span>
@@ -27,11 +26,10 @@
               </span>
             </span>
           </div>
-
           <div class="form-group col-12">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" formControlName="password">
-            <span *ngIf="!password.valid && password.touched" class="error-block">
+            <span *ngIf="!password.valid && (password.touched || userSubmitted)" class="error-block">
               <span *ngIf="password.errors['required']">
                 Please provide password
               </span>
@@ -40,11 +38,10 @@
               </span>
             </span>
           </div>
-
           <div class="form-group col-12">
             <label for="cpassword" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" formControlName="confirmPassword">
-            <span *ngIf="!confirmPassword.valid && confirmPassword.touched" class="error-block">
+            <span *ngIf="!confirmPassword.valid && (confirmPassword.touched || userSubmitted)" class="error-block">
               <span *ngIf="confirmPassword.hasError('required')">
                 Please confirm password
               </span>
@@ -54,20 +51,14 @@
               Password not matched
             </span>
           </div>
-
           <div class="form-group col-12">
             <label for="mobile" class="form-label">Mobile</label>
             <input type="text" class="form-control" formControlName="mobile">
           </div>
-
           <div class="form-group col-12">
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
           </div>
-
-          Form values: {{registrationForm.value | json}} <br>
-          Form Status: {{registrationForm.valid}}
-
         </form>
       </div>
     </div>
