--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -54,6 +54,11 @@
           <div class="form-group col-12">
             <label for="mobile" class="form-label">Mobile</label>
             <input type="text" class="form-control" formControlName="mobile">
+            <span *ngIf="!mobile.valid && (mobile.touched || userSubmitted)" class="error-block">
+              <span *ngIf="mobile.hasError('required')">
+                Please provide mobile
+              </span>
+            </span>
           </div>
           <div class="form-group col-12">
             <button type="submit" class="btn btn-primary">Save</button>
